# anime

./: README.md  dockerfile  main.py  pyproject.toml  session_database.py  teste.py
anime/: app.py
anime/controller/: home.py
anime/controller/v1/: anime_controller.py  token_controller.py  user_controller.py  user_controller2.py  usuario_controller.py
anime/db/: database.py
anime/docker_database/: 10_usuarios.sql
anime/dto/: anime_dto.py  token_dto.py  user_dto.py  usuario_dto.py
anime/exception/: anime_exception.py  usuario_exception.py
anime/interface/: anime_interface.py  usuario_interface.py
anime/model/: anime_model.py  categoria_model.py  usuario_model.py
anime/repository/: anime_repository.py  usuario_repository.py
anime/schemas/: anime_schema.py  user_schema.py
anime/service/: anime_service.py  usuario_service.py
database/scripts_iniciais/: 1_categoria.sql  2_animes.sql
db/: database.py
docker_database/scripts_iniciais/: 2_animes.sql  3_categoria_animes.sql  4_episodio.sql
interface/: anime_interface.py
model/: anime_model.py  categoria_model.py
repository/: anime_repository.py
rsc/model/: anime.py  anime_model.py  categoria.py  categoria_model.py
rsc/repository/: anime_repository.py
rsc/service/: anime_service.py
service/: anime_service.py
source/: app.py
source/controller/v1/: anime_controller.py
source/model/: anime_model.py  categoria_model.py
source/repository/: anime_repository.py
source/service/: anime_service.py
