[project]
name = "ANIME"
version = "0.1.0"
description = ""
authors = [
    {name = "marilan",email = "cardosomcds1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "fastapi[standard] (>=0.128.0,<0.129.0)",
    "python-multipart (>=0.0.21,<0.0.22)",
    "pwdlib[argon2] (>=0.3.0,<0.4.0)",
    "pyjwt (>=2.10.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
